--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 
         <!--Introducao-->
         <BR></BR>
-        <div>
-            <p>Olá colegas, Bem-vindos ao Blog IMEL, e hoje abordaremos de um assunto que, embora chato, é na verdade uma grande maravilha, Hoje falaremos dos <strong>tipos de funções</strong>
+        <div >
+            <p class="introducao/text">Olá colegas, Bem-vindos ao Blog IMEL, e hoje abordaremos de um assunto que, embora chato, é na verdade uma grande maravilha, Hoje falaremos dos <strong>tipos de funções</strong>
             </p>
             <BR></BR>
             <p>Existem vários tipos de FUNÇÕES(correspondência entre dois conjuntos),ok, na verdade existem 4 tipos de funções que estam separadas em dois grandes grupos:</p>
@@ -75,7 +75,7 @@
                 <h2>Funções Algébrica Racional Interia(FARI)</h2>
 
                 <BR></BR>
-                <div class="def-prof">
+                <div class="def-prof" id="Fari">
                     <p>O que vimos na Sala:</p>
                     <div class="def">
                         <p>É toda a função cuja a expressão analítica é um polinómio da forma:
@@ -171,19 +171,19 @@
                                         <mo>+</mo>
 
                                         <msub>
-                                            <mi><strong></strong>a</mi>
-                                            <mn><strong></strong>1</mn>
+                                            <mi>a</mi>
+                                            <mn>1</mn>
                                         </msub>
                                         <msup>
-                                            <mi><strong></strong>x</mi>
-                                            <mn><strong></strong>n-1</mn>
+                                            <mi>x</mi>
+                                            <mn>n-1</mn>
                                         </msup>
-                                        <mo><strong></strong>+</mo>
-                                        <mtext><strong></strong>...</mtext>
-                                        <mo><strong></strong>+</mo>
+                                        <mo>+</mo>
+                                        <mtext>...</mtext>
+                                        <mo>+</mo>
                                         <msub>
-                                            <mi><strong>a</strong></mi>
-                                            <mn><strong></strong>n</mn>
+                                            <mi>a</mi>
+                                            <mn>n</mn>
                                         </msub>
 
                                     </mrow>
@@ -364,15 +364,7 @@
         <marquee behavior="" direction="right">Feito por Diangienda Nkana</marquee>
     </footer>
 
-    <script>
-        function mostrar(){
-           if(menu-items.style.display == 'block'){
-            menu-items.style.display = 'none'
-           }else{
-            menu-items.style.display = 'block';
-           }
-        }
-    </script>
+    
 </body>
 
     
