--- a/index.html
+++ b/index.html
@@ -41,13 +41,15 @@
          <div id="img-fundo">
             <img src="assets/capa.jpg" alt="" width="60%">
         </div>
+        <br>
         <h1>Tema: Classificação de funções</h1>
+        <br>
         <img src="assets/child.jpg" alt="menino-pensando" width="70%">
 
         <!--Introducao-->
         <BR></BR>
         <div >
-            <p class="introducao-text">Olá colegas, Bem-vindos ao Blog IMEL, e hoje abordaremos de um assunto que, embora chato, é na verdade uma grande maravilha, Hoje falaremos dos <strong>tipos de funções</strong>
+            <p class="introducao-text">Olá colegas, Bem-vindos ao Blog IMEL, e hoje abordaremos de um assunto que, embora chato, é na verdade uma grande maravilha, Hoje falaremos dos <strong>tipos de funções</strong> &#x1F60E;
             </p>
             <BR></BR>
             <p>Existem vários tipos de FUNÇÕES(correspondência entre dois conjuntos),ok, na verdade existem 4 tipos de funções que estam separadas em dois grandes grupos:</p>
@@ -55,9 +57,9 @@
             <BR></BR>
 
             <ol>
-                <li><strong>Funcões Algébricas</strong>:Uma função ƒ é chamada função algébrica quando pode ser formada através de operações algébricas (adição, subtração, multiplicação, divisão e radiciação).</li>
+                <li><strong>Funcões Algébricas</strong>:Uma função ƒ é chamada função algébrica quando pode ser formada através de operações algébricas(adição, subtração, multiplicação, divisão e radiciação).</li>
                 <br>
-                <li><strong>Funções Não Algébricas(transcendentes) </strong>:Uma função transcendente é uma função cuja expressão analítica(fórmula) não figuram somente operações elemetares, pois existem a exponenciação, o logarítmo as razões trigonométricas</li>
+                <li><strong>Funções Não Algébricas(transcendentes)</strong>: Uma função transcendente é uma função cuja expressão analítica(fórmula) não figuram somente operações elemetares, pois existem a exponenciação, o logaritmo as razões trigonométricas</li>
             </ol>
 
             <BR></BR>
@@ -231,8 +233,7 @@
                 </div>
                 <br>
                 <div class="def-site">
-                    Em palavras brutas e sem redeios, queremos dizer que toda a função que , depois de todas as simplificacoes possiveis, resta uma variavel no demoninador 
-
+                    Em palavras brutas e sem rodeios, podemos dizer que toda a função que uma função algébrica racional fraccionária é que,  depois de todas as simplificacoes possiveis, resta uma variavel no demoninador 
                 </div>
                 
             
