Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
                            <msqrt>
                                <mfrac>
                                 <mrow><mi>x</mi><mo>+</mo><mn>1</mn></mrow>
-                                <mrow><mi>x</mi><mo>-</mo><mn>1</mn></mrow>
+                                <mrow><mi>x</mi><mo>-</mo><mn>2</mn></mrow>
                                </mfrac>
                            </msqrt>
                         </math>
@@ -355,7 +355,10 @@
                         <math>
                            <mi>y</mi>
                            <mo>=</mo>
-                           <mn>5</mn>   
+                           <msqrt>
+                              <mn>5</mn>
+                              <mi>x</mi>
+                           </msqrt>
                         </math>                
                     </p>
                 </div>
